Archive2/fa/7c4983183ff295/output
main.cpp: In function 'int main()':
main.cpp:18:10: error: call of overloaded 'foo(int)' is ambiguous
     foo(2); //Error 
          ^
main.cpp:18:10: note: candidates are:
main.cpp:5:10: note: void A::foo(int)
     void foo(int a = 5){ std::cout << a << "1" << std::endl; }
          ^
main.cpp:10:10: note: void B::foo(int)
     void foo(int a = 5){ std::cout << a << std::endl; }
          ^
